<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainmenu.ui.PlayerSelectScreenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

        <TextView
            android:id="@+id/textViewCreateCharacterSelectYourCharacter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/text_350_50"
            android:fontFamily="@font/breathe_fire_normal"
            android:gravity="center"
            android:text="@string/select_character_select_your_character"
            android:textColor="@color/background_brown"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageViewNewCharacter"
            android:layout_width="425dp"
            android:layout_height="350dp"
            android:src="@drawable/text_350_250"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="140dp" />

        <TextView
            android:id="@+id/textViewCreateCharacterNewCharacter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="85dp"
            android:fontFamily="@font/breathe_fire_normal"
            android:text="@string/character_select_new_character"
            android:textColor="@color/background_brown"
            android:textSize="24sp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageViewNewCharacter"/>

        <EditText
            android:id="@+id/editTextCreateCharacter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/vecna"
            android:hint="@string/player_select_enter_name"
            android:textColor="@color/background_brown"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCreateCharacterNewCharacter" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButtonCharacterSelectConfirm"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="36dp"
            android:fontFamily="@font/breathe_fire_normal"
            android:text="@string/select_character_create_new_character"
            android:textColor="@color/foreground_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCreateCharacter">

        </com.google.android.material.button.MaterialButton>

        <ImageView
            android:id="@+id/imageViewLoadCharacter"
            android:layout_width="425dp"
            android:layout_height="350dp"
            android:src="@drawable/text_350_250"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="390dp" />

        <TextView
            android:id="@+id/textViewCharacterSelectLoadSavedCharacter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="85dp"
            android:fontFamily="@font/breathe_fire_normal"
            android:text="@string/select_character_load_saved_character"
            android:textColor="@color/background_brown"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageViewLoadCharacter">

        </TextView>

        <ListView
            android:id="@+id/listViewMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewCharacterSelectLoadSavedCharacter" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>