<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainmenu.ui.MainGameMenuScreenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

        <ImageView
            android:id="@+id/imageViewMainGameMenu1"
            android:layout_width="350dp"
            android:layout_height="550dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/dungeon_entrance_1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButtonMainGameMenuExploreDungeon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/imageViewMainGameMenu1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/main_game_menu_explore_the_dungeon"
            android:textColor="@color/foreground_yellow"
            android:fontFamily="@font/breathe_fire_normal"
            android:textSize="20sp"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButtonCharacterInfoScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/character_sheet_icon"
            android:fontFamily="@font/donjonicons"
            android:textSize="32sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButtonInventoryScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/inventory_icon"
            android:fontFamily="@font/donjonicons"
            android:textSize="32sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>