<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharacterSelectScreenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewCharacterSelect"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </ImageView>

        <TextView
            android:id="@+id/textViewCreateCharacterSelectYourCharacter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/imageViewCharacterSelect"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:text="@string/select_character_select_your_character"
            android:textSize="24dp">
        </TextView>

        <View
            android:id="@+id/divider1"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="97dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewCreateCharacterSelectYourCharacter"
            />

        <TextView
            android:id="@+id/textViewCreateCharacterNewCharacter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/divider1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:text="@string/character_select_new_character"
            android:textSize="24dp">
        </TextView>

        <EditText
            android:id="@+id/editTextCreateCharacter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Enter your character's name"
            app:layout_constraintTop_toBottomOf="@+id/textViewCreateCharacterNewCharacter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        </EditText>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButtonCharacterSelectConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/select_character_create_new_character"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCreateCharacter">

        </com.google.android.material.button.MaterialButton>

        <View
            android:id="@+id/divider2"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="97dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/materialButtonCharacterSelectConfirm"
            />

        <TextView
            android:id="@+id/textViewCharacterSelectLoadSavedCharacter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:text="@string/select_character_load_saved_character"
            android:textSize="24dp"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            app:layout_constraintStart_toStartOf="parent">

        </TextView>

        <ListView
            android:id="@+id/listViewMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewCharacterSelectLoadSavedCharacter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </ListView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>