<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayoutCombatScreen"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dungeon.combat.ui.CombatScreenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

        <ImageView
            android:layout_width="450dp"
            android:layout_height="250dp"
            android:src="@drawable/text_350_150"
            app:layout_constraintStart_toStartOf="@+id/cardViewCombatScreenEnemy"
            app:layout_constraintEnd_toEndOf="@+id/cardViewCombatScreenEnemy"
            app:layout_constraintTop_toTopOf="@+id/cardViewCombatScreenEnemy"
            android:layout_marginTop="-48dp"/>

        <ImageView
            android:layout_width="450dp"
            android:layout_height="250dp"
            android:src="@drawable/text_350_150"
            app:layout_constraintStart_toStartOf="@+id/cardViewCombatScreenPlayer"
            app:layout_constraintEnd_toEndOf="@+id/cardViewCombatScreenPlayer"
            app:layout_constraintBottom_toBottomOf="@+id/cardViewCombatScreenPlayer"
            android:layout_marginBottom="-48dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewCombatScreenEnemy"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageViewCombatScreenEnemyPortrait"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="5dp"/>

                <ProgressBar
                    android:id="@+id/progressBarCombatScreenEnemyHP"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:progress="80"
                    android:progressDrawable="@drawable/pb_health"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="16dp"/>

                <TextView
                    android:id="@+id/textViewCombatScreenEnemyHP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="HP X/X"
                    android:fontFamily="@font/vecna_bold"
                    app:layout_constraintTop_toTopOf="@+id/progressBarCombatScreenEnemyHP"
                    app:layout_constraintStart_toStartOf="@+id/progressBarCombatScreenEnemyHP"
                    app:layout_constraintEnd_toEndOf="@+id/progressBarCombatScreenEnemyHP"
                    app:layout_constraintBottom_toBottomOf="@+id/progressBarCombatScreenEnemyHP"/>

                <TextView
                    android:id="@+id/textViewCombatScreenEnemyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="ENEMY NAME"
                    android:fontFamily="@font/vecna_bold_italic"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ListView
            android:id="@+id/listViewCombatScreenText"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/text_border"
            app:layout_constraintTop_toBottomOf="@id/cardViewCombatScreenEnemy"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButtonCombatScreenAttack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/combat_screen_attack"
            android:textColor="@color/foreground_yellow"
            android:fontFamily="@font/breathe_fire_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listViewCombatScreenText"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButtonCombatScreenSpell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/combat_screen_cast_a_spell"
            android:textColor="@color/foreground_yellow"
            android:fontFamily="@font/breathe_fire_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialButtonCombatScreenAttack" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButtonCombatScreenFlee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/combat_screen_flee"
            android:textColor="@color/foreground_yellow"
            android:fontFamily="@font/breathe_fire_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialButtonCombatScreenSpell" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewCombatScreenPlayer"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageViewCombatScreenPlayerPortrait"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="5dp"/>

                <ProgressBar
                    android:id="@+id/progressBarCombatScreenPlayerHP"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:progress="80"
                    android:progressDrawable="@drawable/pb_health"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:id="@+id/textViewCombatScreenPlayerHP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="HP X/X"
                    android:fontFamily="@font/vecna_bold"
                    app:layout_constraintEnd_toEndOf="@+id/progressBarCombatScreenPlayerHP"
                    app:layout_constraintStart_toStartOf="@+id/progressBarCombatScreenPlayerHP"
                    app:layout_constraintBottom_toBottomOf="@+id/progressBarCombatScreenPlayerHP"
                    app:layout_constraintTop_toTopOf="@+id/progressBarCombatScreenPlayerHP"/>

                <ProgressBar
                    android:id="@+id/progressBarCombatScreenPlayerMP"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:progress="80"
                    android:progressDrawable="@drawable/pb_mana"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/progressBarCombatScreenPlayerHP"
                    app:layout_constraintTop_toBottomOf="@+id/progressBarCombatScreenPlayerHP"/>

                <TextView
                    android:id="@+id/textViewCombatScreenPlayerMP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MP X/X"
                    android:fontFamily="@font/vecna_bold"
                    app:layout_constraintEnd_toEndOf="@+id/progressBarCombatScreenPlayerMP"
                    app:layout_constraintStart_toStartOf="@+id/progressBarCombatScreenPlayerMP"
                    app:layout_constraintBottom_toBottomOf="@+id/progressBarCombatScreenPlayerMP"
                    app:layout_constraintTop_toTopOf="@+id/progressBarCombatScreenPlayerMP" />

                <TextView
                    android:id="@+id/textViewCombatScreenPlayerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="PLAYER NAME"
                    android:fontFamily="@font/vecna_bold_italic"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>